force-app/main/default/objects/Hygiene_Installation_Flag__c/Hygiene_Installation_Flag__c.object-meta.xml
        <CustomObject>
          <label>Hygiene Installation Flag</label>
          <pluralLabel>Hygiene Installation Flags</pluralLabel>
          <description>Per-installation hygiene finding. Ghost installations, overlapping contracts, asset-vs-renewal ARR mismatches.</description>
          <sharingModel>ReadWrite</sharingModel>
          <nameField>
  <label>Auto Number</label>
  <type>AutoNumber</type>
  <displayFormat>HYG-{0000000}</displayFormat>
</nameField>
        </CustomObject>