force-app/main/default/objects/Hygiene_Installation_Flag__c/fields/Extended_To_Date__c.field-meta.xml
<CustomField>
  <fullName>Extended_To_Date__c</fullName>
  <label>ExtendedToDate (denorm)</label>
  <type>Date</type>

</CustomField>