force-app/main/default/objects/Hygiene_Installation_Flag__c/fields/Installation__c.field-meta.xml
    <CustomField>
      <fullName>Installation__c</fullName>
      <label>Installation</label>
      <type>Lookup</type>
      <referenceTo>Installation__c</referenceTo>
<relationshipName>HygieneInstallFlags</relationshipName>
<deleteConstraint>SetNull</deleteConstraint>
    </CustomField>