force-app/main/default/objects/Hygiene_Installation_Flag__c/fields/Status__c.field-meta.xml
<CustomField>
  <fullName>Status__c</fullName>
  <label>Installation Status (denorm)</label>
  <type>Text</type>
  <length>80</length>
</CustomField>